force-app/main/default/objects/Order_Item__c/fields/Food_Item__c.field-meta.xml
<CustomField>
    <fullName>Food_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Food Item</label>
    <referenceTo>Food_Item__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>