force-app/main/default/objects/Order_Item__c/fields/Is_New_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is New Item</label>
    <type>Checkbox</type>
</CustomField>